# mvp_math_solver

./: .gitignore  .replit  Dockerfile  Readme.md  api.py  docker-compose.yml  docker-run.sh  generate_all.sh  main.py  math_problems_vector_store.faiss.index  math_problems_vector_store.faiss.mappings  new_tools.csv  pyproject.toml  pyproject.toml.old  replit.nix  requirements.txt  workflow_cache.pkl
.github/workflows/: tests.yml
.streamlit/: config.toml
agents/: cas_agent.py  math_planner_agent.py  plan_execution_agent.py  solver_agent.py  test_cas_agent.py  test_solver_agent.py  test_verification_agent.py  verification_agent.py
api/: calculator.html  run.sh  test.sh
config/: settings.py
core/: Cargo.toml  build_rust.sh  callbacks.py  math_toolbox.py  test_math_toolbox.py  vector_store.py  virtual_tool_manager.py
core/src/: lib.rs
docs/: class_diagram.md  flow_diagram.md  mermaid_diagram.md  sequence.md
l+f/: math_problems_vector_store.faiss.index  math_problems_vector_store.faiss.mappings  new_tools.csv
rust/: Dockerfile  Readme.md  docker-compose.yml  math_solver.rs  run.sh
tests/: test_cases.json
ui/: main_app.py  problem_solver.py  sidebar.py
utils/: exceptions.py  logging_utils.py
workflows/: math_workflow.py
