
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-solver"
version = "0.1.0"
description = "A Streamlit application that uses multiple AI agents to solve and verify math problems"
requires-python = ">=3.8"

[tool.poetry.dependencies]
python = "^3.8"
langchain = ">=0.0.267"
langchain-openai = ">=0.0.2"
langchain-core = ">=0.0.10"
langchain-community = ">=0.0.1"
openai = ">=1.3.0"
pydantic = ">=2.4.2"
tenacity = ">=8.2.3"
python-dotenv = ">=1.0.0"
anthropic = ">=0.5.0"
chromadb = ">=0.4.17"
tiktoken = ">=0.5.1"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
fastapi = ">=0.104.1"
uvicorn = ">=0.24.0"
pytest = ">=7.4.3"
pytest-cov = ">=4.1.0"
httpx = ">=0.25.1"
streamlit = ">=1.26.0"
faiss-cpu = ">=1.7.4"
numexpr = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
